# avro-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
.github/workflows/: ci.yml
ci/: overlay-visual-test.sh
crates/avro-core/: Cargo.toml
crates/avro-core/src/: dict.rs  engine.rs  grammar.rs  lib.rs  types.rs
crates/avro-repl/: Cargo.toml
crates/avro-repl/src/: main.rs
crates/fcitx5-adapter/: Cargo.toml  build.rs
crates/fcitx5-adapter/src/: ipc.rs  lib.rs  shim.cpp
crates/fcitx5-adapter/tests/fcitx5_functional/: avrotest.cpp
crates/overlay-adapter/: Cargo.toml
crates/overlay-adapter/src/: main.rs
crates/wasm-adapter/: Cargo.toml  package.json
crates/wasm-adapter/src/: lib.rs
crates/wasm-adapter/web/: LICENSE.md  app.js  index.html  style.css
docs/: differential-test-findings.md
